cabal-version:   2.2
name:            wai-handler-webkit
version:         3.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Turn WAI applications into standalone GUIs using QtWebkit.
description:     API docs and the README are available at <http://www.stackage.org/package/wai-handler-webkit>.
category:        Web
stability:       unstable
build-type:      Simple
homepage:        https://github.com/yesodweb/wai/tree/master/wai-handler-webkit
extra-source-files:  README.md ChangeLog.md

library
    default-language: Haskell2010
    hs-source-dirs:    src
    build-depends:     base      >= 4       && < 5
                     , wai       >= 3.0     && < 3.3
                     , warp      >= 3.0     && < 3.4
    ghc-options:       -Wall
    exposed-modules:   Network.Wai.Handler.Webkit
    cxx-sources:         cbits/webkit.cpp
    if os(windows)
        extra-libraries: QtCore5, QtGui5, QtNetwork5, QtWebKit5
    else
        pkgconfig-depends: Qt5WebKit, Qt5Core, Qt5Gui, Qt5Widgets, Qt5WebKitWidgets
        extra-libraries: stdc++

flag demo
    default: False
    manual: True
    description: Build the demo

executable wai-handler-webkit-demo
    default-language: Haskell2010
    main-is: sample.hs
    hs-source-dirs: app
    build-depends: base, http-types, wai-handler-webkit, wai, warp
    if flag(demo)
        buildable: True
    else
        buildable: False
    ghc-options: -threaded

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai-handlers.git
